--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@react-oauth/google": "^0.12.1",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.9",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "jwt-decode": "^4.0.0",
     "pdfjs-dist": "^3.0.279",
     "prismjs": "^1.29.0",
     "react": "^19.0.0",
@@ -36,6 +38,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^22.13.14",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
